docs: auth routes
